<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchOptionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editCardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="200dp"
            android:autofillHints="@string/card_name_edit_text"
            android:hint="@string/card_name_edit_text"
            android:inputType="text"
            android:minHeight="50dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/color_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editCardName"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/timberwolf"
            android:text="@string/color_button"
            android:textSize="20sp"
            android:textColor="@color/smoky_black" />

        <TextView
            android:id="@+id/textView_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/color_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/selected_colors_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/search_button" />

    </RelativeLayout>

</FrameLayout>