<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CardDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/collection_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/collection_card_image"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@tools:sample/avatars" />


            <TextView
                android:id="@+id/collection_card_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/collection_quantity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/collection_change_qty_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_quantity"
                    android:textSize="16sp"
                    android:layout_marginStart="15dp"/>

                <Button
                    android:id="@+id/collection_add_to_deck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginStart="30dp"
                    android:text="@string/add_to_deck" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>